fix spacing on buttons

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -72,6 +72,10 @@ h2 {
   margin-right: 0.8rem;
 }
 
+.buttonMarginTop {
+  margin-top: 0.5rem;
+}
+
 .searchButton {
   background-color: #ffce67;
 }
